# double-baskin-game

./: README.md  workspace.code-workspace
.github/workflows/: build.yml
thirtyone-backend/: Cargo.toml
thirtyone-backend/src/: client.rs  game.rs  main.rs  matcher.rs  proto.rs
thirtyone-frontend/: .env  .eslintrc.json  .prettierrc  index.html  package.json  pnpm-lock.yaml
thirtyone-frontend/src/: App.tsx  const.ts  index.css
thirtyone-frontend/src/common/: Button.tsx  Center.tsx  Input.tsx  User.ts
thirtyone-frontend/src/game/: CounterControl.tsx  GamePage.tsx  IdleScene.tsx  LoadingScene.tsx  machine.ts  packet.ts
thirtyone-frontend/src/pages/: GamePage.tsx  JoinPage.tsx  MatchPage.tsx  WelcomePage.tsx  index.ts
thirtyone-frontend/src/welcome/: JoinForm.tsx  WelcomePage.tsx
